refactor: streamline parking operations and vehicle registration